Add Kafka connection string to environment variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     command: bun worker
     depends_on:
       - redis
+      - kafka1
 
   zoo1:
     image: confluentinc/cp-zookeeper:7.7.1
