--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-DATABASE_URL=mongodb://localhost:27017/your-database-name
-REDIS_URL=redis://localhost:6379
-KAFKA_CONNECTION_STRING=localhost:9092
+REDIS_URL=redis://redis:6379
+KAFKA_CONNECTION_STRING=kafka1:19092
