--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - .env
     restart: unless-stopped
     command: bun start
+    ports:
+      - "3000:3000"
     depends_on:
       - redis
       - kafka1
